# trophy

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
locale/ar/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
main/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  translation.py  urls.py  utils.py  views.py
static/css/: cart-responsive.css  main.css  mobile-fixes.css  responsive.css  styles.css
static/js/: main.js
templates/: base.html
templates/email/: notification.html
templates/pages/: about.html  auth_page.html  cart.html  categories.html  contact.html  home.html  policy.html  refund.html  register_vendor.html  vendors.html
templates/partials/: _announcement.html  _footer.html  _go_to_top.html  _go_top.html  _header.html  _mobile_menu.html  _preloader.html  _search.html  _shopping_cart.html  toolbar_bottom.html
templates/partials/home/: _categories.html  _collection.html  _divisions.html  _intro.html  _marquee.html  _slider.html  _testimonial.html  vendors.html
templates/partials/login/: _forget_password.html  _login.html  _register.html
trophy/: asgi.py  settings.py  urls.py  wsgi.py
